--- a/working.html
+++ b/working.html
@@ -117,7 +117,7 @@
             <h1>COMING SOON...</h1>
         </div>
         <div class="bottomleft">
-            <a href="Nothing.html">
+            <a href="index.html">
                 <i class="fas fa-angle-left"></i> Home
             </a>
         </div>
@@ -134,7 +134,7 @@
             <h1>COMING SOON...</h1>
         </div>
         <div class="bottomleft">
-            <a href="Nothing.html">
+            <a href="index.html">
                 <i class="fas fa-angle-left"></i> Home
             </a>
         </div>
