--- a/index.html
+++ b/index.html
@@ -847,7 +847,7 @@
       <div class="col colb2">
         <li>
           <strong>16,003,509</strong>
-          shots dribbbled
+          shots 
           <i class="fas fa-futbol"></i>
         </li>
       </div>
@@ -864,7 +864,7 @@
       <div class="col-12">
         <li>
           <strong>16,003,509</strong>
-          shots dribbbled
+          shots 
 
         </li>
       </div>
