--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <H1>
           Discover the world’s top designers & creatives
         </H1>
-        <p>Dribbble is the leading destination to find & showcase creative work and home to the world's best design
+        <p>Nothing is the leading destination to find & showcase creative work and home to the world's best design
           professionals.</p>
         <a href="working.html">
           <button class="btn button3" type="button">Sign Up</button>
